--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>Max Personal Profile</h1>
 <br>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error ipsa, voluptate voluptatem, laborum fugit perspiciatis veniam, maxime praesentium distinctio dolorem voluptas nesciunt adipisci earum cum blanditiis veritatis dolor dolores deserunt.</p>
+<p>Hello sikdai xu</p>
 <br>
 
 <body class="hello">
@@ -28,11 +29,11 @@
             <li>Do Something</li>
             <li>Do Something</li>
         </ol>
-        <br>
+        <h2>Todos</h2>
         <ul>
-            <li>Pla</li>
-            <li></li>
-            <li></li>
+            <li><input type="checkbox">play TT</li>
+            <li><input type="checkbox">hello TT></li>
+            <li>input type</li>
         </ul>
 
     </div>
